--- a/xFunc/Views/SettingsView.xaml
+++ b/xFunc/Views/SettingsView.xaml
@@ -27,6 +27,7 @@ limitations under the License. -->
     </Window.Resources>
     <Window.CommandBindings>
         <CommandBinding Command="views:SettingsView.OKCommand" Executed="OKCommand_Execute" CanExecute="OKCommand_CanExecute" />
+        <CommandBinding Command="views:SettingsView.ResetCommand" Executed="ResetCommand_Execute" />
     </Window.CommandBindings>
     
     <Grid>
@@ -75,8 +76,10 @@ limitations under the License. -->
         <CheckBox x:Name="updatesCheckBox" Content="{x:Static res:Resource.SettingsCheckUpdates}" Margin="10,202.9,10,0" VerticalAlignment="Top" IsChecked="True" />
 
         <Grid Grid.Row="1" Background="#FFEFEFEF" Height="39">
-            <Button Content="{x:Static res:Resource.SettingsSave}" HorizontalAlignment="Right" Margin="0,10,87,8" Width="75" Command="views:SettingsView.OKCommand" IsDefault="True" />
-            <Button Content="{x:Static res:Resource.SettingsCancel}" HorizontalAlignment="Right" Margin="0,10,8,8" Width="75" IsCancel="True" />
+            <Button Content="{x:Static res:Resource.SettingsReset}" HorizontalAlignment="Left" Margin="10,10,0,8" Padding="8,0,8,0" MinWidth="75" Command="views:SettingsView.ResetCommand" />
+
+            <Button Content="{x:Static res:Resource.SettingsSave}" HorizontalAlignment="Right" Margin="0,10,87,8" Padding="8,0,8,0" MinWidth="75" Command="views:SettingsView.OKCommand" IsDefault="True" />
+            <Button Content="{x:Static res:Resource.SettingsCancel}" HorizontalAlignment="Right" Margin="0,10,8,8" Padding="8,0,8,0" MinWidth="75" IsCancel="True" />
         </Grid>
     </Grid>
 </Window>
