--- a/xFunc/Views/VariableView.xaml
+++ b/xFunc/Views/VariableView.xaml
@@ -19,28 +19,56 @@ limitations under the License. -->
         xmlns:res="clr-namespace:xFunc.Resources"
         Title="{x:Static res:Resource.VariablesTitle}" Width="220" Height="280"
         ShowInTaskbar="False">
-    <ListView ItemsSource="{Binding}">
-        <ListView.ItemContainerStyle>
-            <Style TargetType="{x:Type ListViewItem}">
-                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding Path=IsReadOnly}" Value="True">
-                        <Setter Property="Foreground" Value="Gray" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-        </ListView.ItemContainerStyle>
-        <ListView.View>
-            <GridView>
-                <GridViewColumn Header="{x:Static res:Resource.VarNameHeader}">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=Variable}" TextAlignment="Center" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
-                <GridViewColumn Header="{x:Static res:Resource.VarValueHeader}" DisplayMemberBinding="{Binding Path=Value}" />
-            </GridView>
-        </ListView.View>
-    </ListView>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.Triggers>
+            <EventTrigger RoutedEvent="MouseEnter">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Storyboard.TargetName="border" Storyboard.TargetProperty="Height" To="39" Duration="0:0:0.15" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+            <EventTrigger RoutedEvent="MouseLeave">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Storyboard.TargetName="border" Storyboard.TargetProperty="Height" To="0" Duration="0:0:0.15" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </Grid.Triggers>
+
+        <ListView Grid.Row="0" ItemsSource="{Binding}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Path=IsReadOnly}" Value="True">
+                            <Setter Property="Foreground" Value="Gray" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ListView.ItemContainerStyle>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="{x:Static res:Resource.VarNameHeader}">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Variable}" TextAlignment="Center" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="{x:Static res:Resource.VarValueHeader}" DisplayMemberBinding="{Binding Path=Value}" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <Border x:Name="border" Grid.Row="1" Height="0">
+            <Grid Background="#FFEFEFEF" Height="39">
+                <Button Content="Update" HorizontalAlignment="Left" Margin="10,10,0,8" Padding="8,0,8,0" MinWidth="75" />
+            </Grid>
+        </Border>
+    </Grid>
 </Window>
