--- a/xFunc/Views/VariableView.xaml
+++ b/xFunc/Views/VariableView.xaml
@@ -15,10 +15,17 @@ limitations under the License. -->
 <Window x:Class="xFunc.Views.VariableView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:viewModes="clr-namespace:xFunc.ViewModels"
+        xmlns:views="clr-namespace:xFunc.Views"
         xmlns:res="clr-namespace:xFunc.Resources"
         Title="{x:Static res:Resource.VariablesTitle}" Width="220" Height="280"
         ShowInTaskbar="False">
+    <Window.CommandBindings>
+        <CommandBinding Command="views:VariableView.AddCommand" Executed="AddCommand_Executed" />
+        <CommandBinding Command="views:VariableView.EditCommand" Executed="EditCommand_Executed" CanExecute="SelectedCommand_CanExecute" />
+        <CommandBinding Command="views:VariableView.DeleteCommand" Executed="DeleteCommand_Executed" CanExecute="SelectedCommand_CanExecute" />
+        <CommandBinding Command="views:VariableView.RefreshCommand" Executed="RefreshCommand_Executed" />
+    </Window.CommandBindings>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -41,7 +48,7 @@ limitations under the License. -->
             </EventTrigger>
         </Grid.Triggers>
 
-        <ListView Grid.Row="0" ItemsSource="{Binding}">
+        <ListView x:Name="varList" Grid.Row="0" ItemsSource="{Binding}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -67,7 +74,18 @@ limitations under the License. -->
         </ListView>
         <Border x:Name="border" Grid.Row="1" Height="0">
             <Grid Background="#FFEFEFEF" Height="39">
-                <Button Content="Update" HorizontalAlignment="Left" Margin="10,10,0,8" Padding="8,0,8,0" MinWidth="75" />
+                <Grid.Resources>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Width" Value="16" />
+                        <Setter Property="Height" Value="16" />
+                        <Setter Property="HorizontalAlignment" Value="Left" />
+                    </Style>
+                </Grid.Resources>
+
+                <Button Margin="10,10,0,8" Command="views:VariableView.AddCommand" />
+                <Button Margin="34,10,0,8" Command="views:VariableView.EditCommand" />
+                <Button Margin="58,10,0,8" Command="views:VariableView.DeleteCommand" />
+                <Button Margin="82,10,0,8" Command="views:VariableView.RefreshCommand" />
             </Grid>
         </Border>
     </Grid>
