--- a/xFunc/Views/AddFunctionView.xaml
+++ b/xFunc/Views/AddFunctionView.xaml
@@ -1,4 +1,18 @@
-﻿<Window x:Class="xFunc.Views.AddFunctionView"
+﻿<!-- Copyright 2012-2013 Dmitry Kischenko
+
+Licensed under the Apache License, Version 2.0 (the "License"); 
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software 
+distributed under the License is distributed on an "AS IS" BASIS, 
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
+express or implied. 
+See the License for the specific language governing permissions and 
+limitations under the License. -->
+<Window x:Class="xFunc.Views.AddFunctionView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:xFunc.Views"
@@ -9,7 +23,7 @@
     <Window.CommandBindings>
         <CommandBinding Command="views:AddFunctionView.OKCommand" Executed="OKCommand_Executed" CanExecute="OKCommand_CanExecute" />
     </Window.CommandBindings>
-    
+
     <Grid>
         <Label Content="{x:Static res:Resource.AddFuncName}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Target="{Binding ElementName=nameBox}" />
         <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="23" Margin="85,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="167" />
