--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -570,6 +570,7 @@ limitations under the License. -->
                         <Grid.RowDefinitions>
                             <RowDefinition />
                             <RowDefinition />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
@@ -612,7 +613,20 @@ limitations under the License. -->
                                 <ToolTip Content="{x:Static res:Resource.LCMToolTip}" />
                             </Button.ToolTip>
                         </Button>
-                        <Button Grid.Row="1" Grid.Column="2" Tag="fact" Click="InsertFunc_Click">
+                        <Button Grid.Row="1" Grid.Column="2" Tag="sum" Click="InsertDoubleArgFunc_Click">
+                            <Rectangle Fill="{StaticResource sum}" Width="40" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.SumToolTip}" />
+                            </Button.ToolTip>
+                        </Button>
+                        <Button Grid.Row="1" Grid.Column="3" Tag="product" Click="InsertDoubleArgFunc_Click">
+                            <Rectangle Fill="{StaticResource product}" Width="40" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.ProductToolTip}" />
+                            </Button.ToolTip>
+                        </Button>
+
+                        <Button Grid.Row="2" Grid.Column="0" Tag="fact" Click="InsertFunc_Click">
                             <Rectangle Fill="{StaticResource fact}" Width="40" Height="20" />
                             <Button.ToolTip>
                                 <ToolTip Content="{x:Static res:Resource.FactToolTip}" />
