Updated Fluent library.

--- a/xFunc/App.xaml
+++ b/xFunc/App.xaml
@@ -18,7 +18,8 @@ limitations under the License. -->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Office2010/Silver.xaml" />
+                <ResourceDictionary Source="/Fluent;Component/Themes/Generic.xaml" />
+                <ResourceDictionary Source="/Fluent;Component/Themes/Office2010/Silver.xaml" />
                 <ResourceDictionary Source="Operations.xaml" />
                 <ResourceDictionary Source="StylesForControls.xaml" />
             </ResourceDictionary.MergedDictionaries>
